--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter0001
-description: A new Flutter project.
+name: badminton_yard_booking_app
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  custom_navigation_bar: ^0.8.2
+  rounded_loading_button: ^2.0.8
+  animate_do: ^2.1.0
+  google_fonts: ^2.3.2
+  carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
